# Chess-to-the-Death

./: CMakeLists.txt  PROPOSAL.md  README.md
src/: board.cxx  board.hxx  chess_to_the_death.cxx  controller.cxx  controller.hxx  model.cxx  model.hxx  piece.cxx  piece.hxx  player.cxx  player.hxx  view.cxx  view.hxx
test/: model_test.cxx
